cargo-features = ["public-dependency"]

[package]
name = "net-stream"
version = "0.1.0"
authors = ["Asger Juul Brunshøj <asgerbrunshoj@gmail.com>"]
description = "Typed streams for Rust client/server TCP and UDP networking"
edition = "2021"
publish = false

[dependencies]
assert_let_bind = "0.1.1"
bincode = "1.3"
bytes = "1.2"
derive_more = { version = "0.99", default-features = false, features = ["from", "deref"], public = true }
futures = { version = "0.3", public = true }
log = "0.4"
pin-project = "1"
serde = { version = "1.0", features = ["derive"], public = true }
smart-default = "0.6"
thiserror = { version = "1", public = true }
tokio = { version = "1.20", features = ["net", "rt"] }
tokio-stream = { version = "0.1.9", default-features = false, features = [
  "net",
  "time", # for the IntervalStream wrapper (used for UDP heartbeats)
] }
tokio-util = { version = "0.7", features = ["net", "codec"] }
typed-builder = "0.12"
uuid = { version = "1.2.2", features = ["serde", "v4", "fast-rng"] }

[dev-dependencies]
tokio = { version = "1.20", features = ["io-util", "time", "macros"] }
env_logger = "0.10"
