[package]
name = "net-stream"
version = "0.1.1"
authors = ["Asger Juul Brunshøj <asgerbrunshoj@gmail.com>"]
description = "Typed streams for Rust client/server TCP and UDP networking"
edition = "2021"
publish = true
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/plul/net-stream"

[dependencies]
assert_let_bind = "0.1.1"
bincode = "1.3"
bytes = "1.2"
derive_more = { version = "0.99", default-features = false, features = ["from", "deref"] }
futures = { version = "0.3" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
smart-default = "0.7"
thiserror = { version = "1" }
tokio = { version = "1.20", features = ["net", "rt"] }
tokio-stream = { version = "0.1.9", default-features = false, features = [
  "net",
  "time", # for the IntervalStream wrapper (used for UDP heartbeats)
] }
tokio-util = { version = "0.7", features = ["net", "codec"] }
type-toppings = "0.1.0"
uuid = { version = "1.2.2", features = ["serde", "v4", "fast-rng"] }

[dev-dependencies]
tokio = { version = "1.20", features = ["io-std", "io-util", "time", "macros", "rt-multi-thread"] }
env_logger = "0.10"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
