[workspace]
resolver = "2"
members = ["crates/net-stream", "crates/net-stream-udp", "crates/net-stream-tcp", "crates/net-stream-ws", "crates/net-stream-ws-wasm"]

[workspace.package]
authors = ["Asger Juul Brunshøj <asgerbrunshoj@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/plul/net-stream"
version = "0.1.1"

[workspace.dependencies]
assert_let_bind = "0.1.1"
bincode = "1.3"
bytes = "1.2"
derive_more = { version = "0.99", default-features = false, features = ["from", "deref", "display"] }
futures = { version = "0.3" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
smart-default = "0.7"
thiserror = { version = "1" }
tokio = { version = "1.20", features = ["net", "rt"] }
tokio-stream = { version = "0.1.9", default-features = false, features = [
  "net",
  "time", # for the IntervalStream wrapper (used for UDP heartbeats)
] }
tokio-util = { version = "0.7", features = ["net", "codec"] }
type-toppings = "0.1.0"
uuid = { version = "1.2.2", features = ["serde", "v4", "fast-rng"] }

net-stream = "0.1.1"
net-stream-udp = "0.1.1"
net-stream-tcp = "0.1.1"
net-stream-ws = "0.1.1"
net-stream-ws-wasm = "0.1.1"

[patch.crates-io]
net-stream = { path = "crates/net-stream" }
net-stream-udp = { path = "crates/net-stream-udp" }
net-stream-tcp = { path = "crates/net-stream-tcp" }
net-stream-ws = { path = "crates/net-stream-ws" }
net-stream-ws-wasm = { path = "crates/net-stream-ws-wasm" }
